--- a/index.html
+++ b/index.html
@@ -50,20 +50,23 @@
             <h1>สัมผัสประสบการณ์ที่เหนือกว่า</h1>
             <h3>กับบริการครบวงจร</h3>
             <div class="row content-event-1-image">
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12">
                     <img src="./static/event1/1.png" alt="">
                     <h2>ฝากถอนออโต้ <br /> รวดเร็ว มั่นใจ 100%</h2>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12">
                     <img src="./static/event1/2.png" alt="">
                     <h2>บริการลูกค้า <br /> ตลอด 24 ชม.</h2>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-12">
                     <img src="./static/event1/3.png" alt="">
                     <h2>มั่นคงปลอดภัย <br /> เว็บตรงไม่ผ่านเอเยนต์</h2>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="sub-menu">
 
     </div>
     <div class="container">
