--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <div class="nav-bar">
-    <nav class="container navbar navbar-expand-lg navbar-dark">
+    <nav class="container navbar navbar-expand-xl navbar-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
