--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             $("#nav-placeholder").load("navbar.html");
             $("#footer-placeholder").load("footer.html");
             let html = ""
-            for (let i = 1; i <= 36; i++) {
+            for (let i = 1; i <= 40; i++) {
                 html += ` <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                    <img src="./static/logo_games/img${i}.png" style="max-width: 100vw;" >
+                    <img src="./static/ico/img${i}.png" style="max-width: 140px;" >
                 </div>`
             }
             $("#logo-games").html(html)
