--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>web_slot_theme_red_casino</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="font_style.css" />
-
+    <link rel="icon" type="image/x-icon" href="./static/Path 2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
